add minor jade pin callback robustness checks